hphp/test/slow/reassign_this/1490.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/1490.php on line 6
